# fsm

./: Makefile  README.md  pyproject.toml
docs_src/: quick_start.py
fsm/: __init__.py  exceptions.py  fsm.py
tests/: test_fsm.py
